corrigindo a posição dos itens

--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
       </div>
 
       <aside>
-        <h1>
+        <h1 class="nossas-lojas">
           <span  id="lojas">NOSSAS</span>
           <span class="cor2">LOJAS</span>
         </h1>
