--- a/index.html
+++ b/index.html
@@ -64,10 +64,14 @@
         src="/assets/imagens/eletromile.png"
         alt="img-logo-eletromile"
       />
+
+      <button class="menu-toggle" id="menu-toggle">&#9776;</button>
+  <nav class="menu" id="menu">
       <a class="link-lojas" href="#lojas">LOJAS</a>
       <a class="link-promocoes" href="#promocoes">PROMOÇÕES</a>
       <a class="link-sobre" href="#sobre">SOBRE</a>
-      <a class="link-contato" href="https://wa.me/5515996822022?text=Olá" target="_blank">CONTATO</a>
+            <a class="link-contato" href="https://wa.me/5515996822022?text=Olá" target="_blank">CONTATO</a>
+            </nav>
     </header>
 
     <div class="caixa-geral">
